Rename query parameter from in_box to in_bbox
