# apps/schema/static/schema/swagger.yaml
@@ -616,7 +616,7 @@ paths:
         List of devices with most recent configurations
       parameters:
         - $ref: '#/components/parameters/deviceStatus/active'
-        - $ref: '#/components/parameters/deviceStatus/inBox'
+        - $ref: '#/components/parameters/deviceStatus/inBbox'
       tags:
         - Shipments
       responses:
@@ -943,8 +943,8 @@ components:
           type: boolean
           enum: [true, false]
 
-      inBox:
-        name: in_box
+      inBbox:
+        name: in_bbox
         in: query
         description: Device's location viewport box coordinates, in the form (min Lon, min Lat, max Lon, max Lat)
         required: false
